<resources>
    <string name="app_name">Călătorie în timp și spațiu: Rusia </string>
    <string name="_0">Capitol 1</string>
    <string name="buton">Lectie</string>
    <string name="titlu_capitol1">Începuturile</string>
    <string name="descriere1_capitol1">Prima menționare a unei comunități pe teritoriul a ceea ce acum se referă la Rusia a ajuns să fie în secolul al IV-lea d.Hr., formând prima unire tribală a slavilor estici (Volinii și Buzhans). Următorul secol a marcat o unire tribală a slavilor orientali, Polyants, în bazinul mijlociu al fluviului Nipru. În 558, Avarii s-au luptat și au câștigat tribul slav al lui Dulebs, marcând succesiunea ulterioară de victorii și înfrângeri, precum și o extindere a slavilor pe o lungă perioadă de timp de aproximativ trei sute de ani.</string>
    <string name="descriere2_capitol1">La începutul secolului al VIII-lea, relansarea triburilor slave a început în bazinele superioare ale Niprului și ale râurilor din Volga. Spre sfârșitul secolului, statul vechi al slavilor s-a confruntat cu extinderea spre nord a khazarilor.</string>
    <string name="descriere3_capitol1">S-au format două mari formațiuni statale: una la nord , cu centrul la Novgorod și alta la sud cu centrul la Kiev. Unirea acestor centre a dus la formarea statului la slavii de est – Rusia Kieveană. Înainte de aceasta conducătorii Novgorodului certându-se între ei, l-au invitat pe Rurik , căpetenia unei cete de varegi, să le fie cneaz. Astfel in 879 a fost înființată Rusia Kieveană, o federație slavo-fino-baltică , condusă de către Rurik,dinastie fondată de către prințul varangian Rurik.</string>
    <string name="descriere4_capitol1">Rurik, primul cneaz, în Cartea Titlurilor a Țarului</string>
    <string name="descriere5_capitol1">Rurik și frații lui, fiind invitat să fie Cneaz </string>
    <string name="chestionar">Chestionar</string>
    <string name="trimite_r_spunsul">Trimite Răspunsul</string>
    <string name="Rusia_kieviana_buton_lectie_1">Rusia Kieviană - Începuturile și domnia lui Rurik</string>
    <string name="titlu_capitol2">Creștinizarea și dezvoltarea Rusiei Kievene</string>
    <string name="descriere0_capitol2">Cneazul Oleg</string>
    <string name="descriere1_capitol2">Cneazul Oleg, care a urmat la domnie după Rurik, a înterprins o campanie la sud și a ucis pe cnezii kieveni – Ascold și Dir. În anul 882 el transformă Kievul în capitala a statului său. Oleg a supus triburile slave din dreapta și stânga Niprului. Unirea triburilor slave de răsărit în jurul Rusiei Kievene a continuat și in timpul domniei urmașilor săi Igor(912–945) , Sveatoslav (965–972 ) și Vladimir (978–1015).</string>
    <string name="descriere2_capitol2">Cnezii Kieveni au purtat războaie cu khazarii, bulgarii de pe Volga și cu Bulgaria dunăreană. Ei au înterprins campanii militare și în Bizanț. În anul 911 între Rusia și Bizanț a fost încheiat un tratat, care îi favoriza pe negustorii ruși. Rusia Kieveană a devenit un stat puternic și prosper. Transformările din viața socială și economică a slavilor de est necesitau adoptarea unei religii noi. Credința slavilor în zei păgâni ca Perun s.a. nu contribuia la întărirea puterii cneazului deoarece ea corespundea relațiilor gentilice. Rusia avea nevoie de o religie care ar fi consolidat unitatea statală și ar fi întărit orânduirea socială existentă.</string>
    <string name="descriere3_capitol2">În anul 988 cneazul Vladimir a adoptat creștinismul prin intermediul Bizanțului și l-a proclamat religie oficială de stat. Desfăşurarea convertirii, aşa cum este ea prezentată de „Cronica vremurilor trecute”, ne apare ca o legendă.</string>
    <string name="descriere4_capitol2">Vladimir cel Mare</string>
    <string name="descriere5_capitol2">Potrivit acesteia, Vladimir a refuzat islamismul pentru că interzicea alcoolul („băutura este bucuria rusului” – spunea el) şi iudaismul pentru că reprezenta credinţa unui popor învins şi fără ţară. Chipurile zeităților vechi au fost distruse iar kievenii aduși la Nipru și, din ordin al cneazului, au fost botezați în apele râului de catre preoții bizantini.</string>
    <string name="Rusia_kieviana_buton_lectie_2">Rusia Kieviană - Creștinizarea și domnia lui Iaroslav cel Înțelept</string>
    <string name="moscova_buton_lectie_1">Moscova - de la cneazul Dolgoruki la Boris Godunov</string>
    <string name="titlu_capitol3">Moscova: 1156 – 1613</string>
    <string name="descriere1_capitol3">Cneazul Dolgoruki</string>
    <string name="descriere2_capitol3">Moscova este situată la o intersecţie strategică în apropierea unor fluvii (Oka, Volga, Don, Nipru), precum şi a unor rute terestre importante. Cneazul Dolgoruki „a pus temelia oraşului Moscova“, se spune într-o cronică ce datează din 1156, aceasta însemnând că a construit primele fortificaţii prevăzute cu întărituri de pământ care aveau deasupra metereze de lemn. Acest Kremlin, sau citadelă, era situat pe o porţiune de pământ triunghiulară, între râul Moscova şi Neglinaia, un mic stat tributar.</string>
    <string name="descriere3_capitol3">Statuie ce îl ilustrează pe Batu Han</string>
    <string name="descriere4_capitol3">După 21 de ani, cneazul din Reazan „s-a năpustit asupra Moscovei şi a ars întregul oraş“. Moscova a fost reconstruită, dar în luna decembrie a anului 1237, mongolii, sub conducerea lui Batu-Khan, un nepot al renumitului Genghis-Khan, au cucerit şi au ars din nou Moscova până la temelii. Mongolii au mai prădat oraşul şi în 1293.</string>
    <string name="descriere5_capitol3">Ivan cel Mare</string>
    <string name="descriere6_capitol3">Oraşul a început să se remarce ca centru religios începând cu anul 1326, când cneazul Moscovei, Ivan Kalita, l-a convins pe capul Bisericii Ortodoxe Ruse să locuiască în Moscova. În timpul domniei lui Ivan cel Mare (1462–1505), Moscova s-a eliberat de sub puterea mongolilor. În 1453, oraşul Constantinopol (azi Istanbul) a căzut sub stăpânirea turcilor otomani, ceea ce însemna că conducătorii Rusiei erau acum singurii monarhi ortodocşi din lume. Drept urmare, Moscova a ajuns să fie numită „a treia Romă“, iar conducătorii ruşi au fost numiţi ţari, sau cezari. Spre sfârşitul domniei lui Ivan cel Mare , Kremlinul a fost extins şi s-au construit ziduri şi turnuri de cărămidă care au rămas aproape neschimbate până în prezent. Zidurile măsoară cu mult peste 2 kilometri lungime, aproape 6 metri lăţime şi 18 metri înălţime, îngrădind zona Kremlinului de aproape 30 de hectare.</string>
    <string name="descriere7_capitol3">Ivan cel Groaznic</string>
    <string name="descriere8_capitol3">Țarul Ivan Vasilievici al IV-lea (cel Groaznic) a rămas în istorie ca o figură reprezentativă pentru perioada tumultuoasă, marcată de profunde transformări, în care a trăit.</string>
    <string name="descriere9_capitol3">Extrem de abil, și-a impus voința printr-o cruntă teroare. Adesea, în mod surprinzător, acte de inimaginabilă cruzime erau urmate de gesturi mărinimoase.</string>
    <string name="descriere10_capitol3">În 1533, Marele Cneaz Vasili al Moscovei aflat pe moarte l-a desemnat la tron pe fiul său Ivan care are aproape 3 ani, punându-l până la vârsta de 15 ani sub tutela mamei sale.Rămas orfan, după moartea mamei sale, Ivan s-a luptat pentru a-și menține domnia. Aceasta a fost marcată de cruzime, precum masacrarea locuitorilor Novgorodului dar și de reforme. În 1550 s-a format adunarea care înregistra hotărârile ţarului, Zemski Sobor. S-a alcătuit Codicele Ţarist, Țarski Sudebnik, şi avea drept scop înlocuirea celui din 1479, al bunicului său Ivan al III-lea, Kneajeski Sudebnik.</string>
    <string name="descriere11_capitol3">În 1551 în cadrul celui de-al treilea sinod bisericesc, Ivan a scris documentul Stoglav în care se regăseau reformele ce se vor aplica în cadrul bisericii: stareții și mănăstirile nu vor mai putea face nici o achiziție fără încuviințarea suveranului, se va interzice mănăstirilor să dea împrumut bani cu cămătă. Fiecare oraș va avea școala lui, deservită de preoți și de dieci, se va preda scrierea, cititul, aritmetica, cântul, religia, bunele maniere.</string>
    <string name="descriere12_capitol3">Ivan cel Groaznic</string>
    <string name="descriere13_capitol3">Punctul culminant al nebuniei și cruzimii sale în urma căruia i se trage numele de Groznic, este în masacrul de la Novgorod, din 1570 a cărei continuare ar fi trebuit să fie în oraşul Pskov. Sub pretextul unei scrisori existente în care se regăsea dorinţa locuitorilor din cele două oraşe de a se supune Poloniei, Ivan, cere orpicinicilor să omoare toată populaţia. Masacrul a durat cinci săptămâni, timp în care în jurul oraşului s-au ridicat ziduri pentru ca niciun locuitori să nu poată ieşi, funcţionarii au fost arestaţi, preoţii au fost uciși. Locuitorii au fost aduşi în faţa lui Ivan şi a fiului său, unde au fost torturaţi.</string>
    <string name="descriere14_capitol3">Numărul total al victimelor se ridică la 15.000 potrivit lui Kurbski, la 18.000 potrivit Celei de-a treia cronici a Novgoroduluişi la 60.000 după autorul Primei cronici a Pskovului.</string>
    <string name="descriere15_capitol3">Politica externă a fost activă:</string>
    <string name="descriere16_capitol3">În 1552, a învins Hanatul Kazanului, armatele căruia au devastat nord-estul Rusiei în mod repetat și a anexat teritoriul său.</string>
    <string name="descriere17_capitol3">În 1554 a supus regiunea Astrahanului. Datorită aceastei cuceriri, Rusia câștigă un debușeu la Marea Caspică și a controlat tot cursul Volgăi.</string>
    <string name="descriere18_capitol3">În 1558 armata ţarului pătrunde în Livonia.</string>
    <string name="descriere19_capitol3">În 1563, februarie, marele oraș comericial Poloțk este cucerit motiv pentru care ţarul adăugă titlurilor sale și pe acela de mare prinț al Polțkului. La începutul anului 1571, tătarii din Crimeea invadează teritoriile meridionale ale Rusiei. La 24 mai 1571 tătarii dau foc caselor de la periferia Moscovei.</string>
    <string name="descriere20_capitol3">Feodor Ivanovici</string>
    <string name="descriere21_capitol3">În 1598, fiul şi succesorul lui Ivan cel Groaznic, Feodor Ivanovici, moare fără urmaşi. Atunci a inceput o perioadă de vremuri tulburi pentru Moscova care a durat aproximativ 15 ani.</string>
    <string name="descriere22_capitol3">Boris Godunov</string>
    <string name="descriere23_capitol3">La scurt timp după urcarea la tron a lui Boris Godunov, cumnatul lui Fedor, Moscova a avut de suferit în urma unei mari secete şi foamete. Se estimează că, în 1602, pe parcursul unei perioade de şapte luni au murit 50 000 de oameni. Între anii 1601 şi 1603, în Moscova au murit în total peste 120 000 de oameni. Pănă in 1613 ,cănd a fost ales țar un membru al familiei Romanov, Mihail Fedorovici. Moscova a traversat o perioadă turbulentă după care a fost refăcută.</string>
    <string name="petru_cel_mare_buton">Petru cel Mare și reușitele sale</string>
    <string name="scris_patrundere_siberia">Din deceniul al nouălea al secolului al XVI-lea, comerțul cu blănuri i-a ispitit pe ruși să traverseze Munții Urali și să pătrundă adânc în Siberia.</string>
    <string name="ecaterina_cea_mare_buton">Imperiul Rus - Ecaterina cea Mare</string>
    <string name="rusia_bolsevica_buton">Imperiul Rus - De la Ecaterina a II-a la sfârșitul Rusiei Bolșevice</string>
    <string name="ussr_buton">URSS</string>
    <string name="buton_rusia_azi">Ideologia imperială rusă</string>
    <string name="buton_surse">Surse</string>
</resources>