<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Lectie_3"
    android:background="@color/cardview_dark_background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/titlu_capitol3"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:id="@+id/titlu"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlu">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="100dp">

            <ImageView
                android:id="@+id/ImageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/yuri_intai_dolgoruky"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/descriere1_capitol3"
                android:textColor="#A1887F"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriere2_capitol3"
                android:textColor="#A1887F"
                android:textSize="35sp"
                android:layout_marginBottom="30dp" />

            <ImageView
                android:id="@+id/ImageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bbatu_han_statuie"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/descriere3_capitol3"
                android:textColor="#A1887F"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriere4_capitol3"
                android:textColor="#A1887F"
                android:textSize="35sp"
                android:layout_marginBottom="30dp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ivan_cel_mare"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/descriere5_capitol3"
                android:textColor="#A1887F"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriere6_capitol3"
                android:textColor="#A1887F"
                android:textSize="35sp"
                android:layout_marginBottom="30dp" />


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ivan_cel_groaznic"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/descriere7_capitol3"
                android:textColor="#A1887F"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriere8_capitol3"
                android:textColor="#A1887F"
                android:textSize="35sp"
                android:layout_marginBottom="30dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriere9_capitol3"
                android:textColor="#A1887F"
                android:textSize="35sp"
                android:layout_marginBottom="30dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriere10_capitol3"
                android:textColor="#A1887F"
                android:textSize="35sp"
                android:layout_marginBottom="30dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriere11_capitol3"
                android:textColor="#A1887F"
                android:textSize="35sp"
                android:layout_marginBottom="30dp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="400dp"
                android:layout_height="667dp"
                android:background="@drawable/ivan_cel_groaznic_2"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/descriere12_capitol3"
                android:textColor="#A1887F"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriere13_capitol3"
                android:textColor="#A1887F"
                android:textSize="35sp"
                android:layout_marginBottom="30dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriere14_capitol3"
                android:textColor="#A1887F"
                android:textSize="35sp"
                android:layout_marginBottom="30dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriere15_capitol3"
                android:textColor="#A1887F"
                android:textSize="35sp"
                android:layout_marginBottom="30dp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriere16_capitol3"
                android:textColor="#A1887F"
                android:textSize="35sp"
                android:layout_marginBottom="30dp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriere17_capitol3"
                android:textColor="#A1887F"
                android:textSize="35sp"
                android:layout_marginBottom="30dp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriere18_capitol3"
                android:textColor="#A1887F"
                android:textSize="35sp"
                android:layout_marginBottom="30dp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriere19_capitol3"
                android:textColor="#A1887F"
                android:textSize="35sp"
                android:layout_marginBottom="30dp" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="400dp"
                android:layout_height="667dp"
                android:background="@drawable/feodor_ivanovici"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/descriere20_capitol3"
                android:textColor="#A1887F"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriere21_capitol3"
                android:textColor="#A1887F"
                android:textSize="35sp"
                android:layout_marginBottom="30dp" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/boris_godunov"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/descriere22_capitol3"
                android:textColor="#A1887F"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriere23_capitol3"
                android:textColor="#A1887F"
                android:textSize="35sp"
                android:layout_marginBottom="30dp" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>