<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal"
    >

    <HorizontalScrollView
        android:id="@+id/hsv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        >

        <ScrollView
            android:id="@+id/sv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/background"
                >
                <Button
                    android:id="@+id/button1"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:text="@string/Rusia_kieviana_buton_lectie_1"
                    android:textSize="11sp"
                    android:backgroundTint="#fc0000"
                    android:layout_marginStart="240dp"
                    android:layout_marginTop="930dp"
                    android:textColor="#FFFF00"
                    />
                <Button
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button2"
                    android:visibility="gone"
                    android:textSize="11sp"
                    android:backgroundTint="#fc0000"
                    android:text="@string/Rusia_kieviana_buton_lectie_2"
                    android:layout_marginStart="330dp"
                    android:layout_marginTop="720dp"
                    android:textColor="#FFFF00"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button3"
                    android:visibility="gone"
                    android:backgroundTint="#fc0000"
                    android:text="@string/moscova_buton_lectie_1"
                    android:layout_marginStart="530dp"
                    android:layout_marginTop="720dp"
                    android:textColor="#FFFF00"/>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button4"
                    android:visibility="gone"
                    android:backgroundTint="#fc0000"
                    android:text="@string/petru_cel_mare_buton"
                    android:layout_marginStart="530dp"
                    android:layout_marginTop="720dp"
                    android:textColor="#FFFF00"
                    />

                <TextView
                    android:id="@+id/scris_capitol4"
                    android:layout_width="600dp"
                    android:layout_height="wrap_content"
                    android:text="@string/scris_patrundere_siberia"
                    android:visibility="gone"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="130dp"
                    android:layout_marginTop="620dp"/>

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ecaterina_cea_mare_buton"
                    android:textSize="11sp"
                    android:backgroundTint="#fc0000"
                    android:visibility="gone"
                    android:layout_marginStart="340dp"
                    android:layout_marginTop="930dp"
                    android:textColor="#FFFF00"
                    />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="200sp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:text="@string/rusia_bolsevica_buton"
                    android:textSize="11sp"
                    android:backgroundTint="#fc0000"
                    android:layout_marginStart="240dp"
                    android:layout_marginTop="910dp"
                    android:textColor="#FFFF00"
                    />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="200sp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:text="@string/ussr_buton"
                    android:textSize="11sp"
                    android:backgroundTint="#fc0000"
                    android:layout_marginStart="900dp"
                    android:layout_marginTop="800dp"
                    android:textColor="#FFFF00"
                    />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/buton_rusia_azi"
                    android:textSize="11sp"
                    android:backgroundTint="#fc0000"
                    android:layout_marginStart="440dp"
                    android:layout_marginTop="930dp"
                    android:textColor="#FFFF00"
                    />


            </LinearLayout>

        </ScrollView>

    </HorizontalScrollView>


    <ImageView
        android:layout_width="110sp"
        android:layout_height="60sp"
        android:id="@+id/legenda"
        android:background="@drawable/legenda"
        android:layout_above="@+id/seekBar"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/surse"
        android:layout_alignParentEnd="true"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="25sp" />


    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:minHeight="500dp"
        android:background="@android:color/transparent"
        />

    <Button
        android:id="@+id/surse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#c60000"
        android:text="@string/buton_surse"
        android:textSize="11sp"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/button_chestionar"
        android:textColor="#FFFF00"
        />

    <Button
        android:id="@+id/button_chestionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#c60000"
        android:text="@string/chestionar"
        android:textSize="11sp"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/legenda"
        android:textColor="#FFFF00"
        />

</RelativeLayout>