<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/cardview_dark_background"
    tools:context=".Lectie_1">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="@color/white"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/titlu_capitol1"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textAlignment="center"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="100dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ruriktitularnik"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="#A1887F"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/descriere4_capitol1"/>


            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriere1_capitol1"
                android:textColor="#A1887F"
                android:textSize="35sp"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriere2_capitol1"
                android:textColor="#A1887F"
                android:textSize="35sp"
                android:layout_marginBottom="30dp"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:background="@drawable/invitatia_lui_rurik_si_fratii_lui"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="#A1887F"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/descriere5_capitol1"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriere3_capitol1"
                android:textColor="#A1887F"
                android:textSize="35sp"
                android:layout_marginBottom="30dp"/>



        </LinearLayout>

    </ScrollView>

</RelativeLayout>